corpus/baselines/compiler/importTypeAssertionDeprecationIgnored.errors.txt
/main.ts(2,30): error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.
/main.ts(3,30): error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.
/main.ts(5,31): error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.
/main.ts(6,31): error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.


==== /types.d.ts (0 errors) ====
    export interface MyType { x: string }
    
==== /main.ts (4 errors) ====
    // With ignoreDeprecations: "6.0", import type assertions should not produce a deprecation error.
    type A = import("./types", { assert: { "resolution-mode": "import" } }).MyType;
                                 ~~~~~~
!!! error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.
    type B = import("./types", { assert: { "resolution-mode": "require" } }).MyType;
                                 ~~~~~~
!!! error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.
    
    const a = import("./types", { assert: { "resolution-mode": "import" } });
                                  ~~~~~~
!!! error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.
    const b = import("./types", { assert: { "resolution-mode": "require" } });
                                  ~~~~~~
!!! error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.
    